# nmaper

./: .gitignore  README.md  go.mod  main.py  pyproject.toml  schema.sql
cmd/nmaper/: main.go
docs/: database-schema.md
internal/app/: app.go  app_test.go  delete.go  deps.go  deps_test.go  history.go  scan.go
internal/cli/: parse.go  parse_test.go
internal/converter/: discovery.go  discovery_test.go
internal/fuzzy/: fuzzy.go  fuzzy_test.go
internal/history/: alerts.go  alerts_test.go  devices.go  diff.go  load.go  posture.go  service.go  service_test.go  types.go
internal/model/: options.go  options_test.go  scanlevel.go  scanlevel_test.go
internal/output/: helpers.go  output.go  output_test.go  sink.go  style.go  terminal_ux.go
internal/parser/: parser.go  parser_test.go  types.go
internal/preflight/: preflight.go  preflight_test.go
internal/scanner/: commands.go  network_policy.go  progress_test.go  runtime.go  scanner.go  scanner_integration_test.go  scanner_test.go  script_args.go  script_availability.go  script_rules.go  script_select.go  scripts.go  source.go  source_test.go
internal/snapshot/: normalize.go  normalize_findings.go  normalize_management.go  normalize_merge.go  normalize_parsers.go  types.go  (+3 more)
scripts/: coverage.sh  install-termux.sh  install.sh  reinstall.sh  test.sh  uninstall.sh
src/: cli.py  converter.py  db.py  fuzzy.py  history.py  model.py  models.py  nmaper.py  parser.py  persistence.py  preflight.py  termui.py
tests/: e2e_real_run.py  e2e_test.go  test_converter.py  test_history.py  test_nmaper.py  test_parser.py
(+13 files in other folders)
