[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaper"
version = "0.1.0"
description = "Nmap snapshots, SQLite history, and terminal analytics for evolving networks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11,<0.12",
    "sqlalchemy>=2.0,<3.0",
]

[project.scripts]
nmaper = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
